# tesser-build

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODOS.md  go.mod  go.sum
ddd-vet-py/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
ddd-vet-py/ddd_vet/: __init__.py  __main__.py  astutil.py  checks.py  classify.py  cli.py  finding.py  run.py  typed_checks.py
ddd-vet-py/testdata/ddd001/: good.py
ddd-vet-py/testdata/ddd002/: bad.py  good.py
ddd-vet-py/testdata/ddd003/: bad.py
ddd-vet-py/testdata/ddd004/: bad.py
ddd-vet-py/testdata/ddd010/: bad.py  good.py
ddd-vet-py/testdata/ddd011/: bad.py  good.py
ddd-vet-py/testdata/ddd012/: bad.py  good.py
ddd-vet-py/testdata/ddd013/: bad.py  good.py
ddd-vet-py/testdata/ddd014/: bad.py  good.py
ddd-vet-py/tests/: test_checks.py  test_classify.py  test_meta.py
docs/: case-study.md  faq.md  (+8 more)
tessercheck-py/: README.md  conftest.py  pyproject.toml  requirements-dev.txt
tessercheck-py/tessercheck/: __init__.py  __main__.py  astutil.py  checks.py  classify.py  cli.py  comments_check.py  discovery.py  doubles_check.py  finding.py  run.py  test_double_check.py  typed_checks.py
tessercheck-py/testdata/tb001/: bad.py
tessercheck-py/testdata/tb002/: bad.py  good.py
tessercheck-py/testdata/tb003/: bad.py  good.py
tessercheck-py/testdata/tb004/: bad.py  good.py
tessercheck-py/testdata/tb010/: bad.py  good.py
tessercheck-py/testdata/tb011/: bad.py  good.py
tessercheck-py/tests/: test_checks.py  test_classify.py  test_cli.py  test_discovery.py  test_meta.py  test_tree_harness.py
(+488 files in other folders)
