[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tessercheck-py"
version = "0.1.0"
description = "Zero-dependency stdlib-ast analyzer for the tesser-build domain-construction conventions (Python)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tessercheck = "tessercheck.cli:main"

[tool.setuptools]
packages = ["tessercheck"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# testdata/ holds analyzer fixtures, not tests — some are deliberately
# non-conformant and must never be collected or imported.
norecursedirs = ["testdata"]

[tool.mypy]
strict = true
files = ["tessercheck", "tests"]
